# notebooks

./: .RData  .all-contributorsrc  .gitignore  README.md  Taskfile.yml  _environment  _quarto.yml  pixi.toml
dependencies/: dependencies.R  environment.yml  mgnify-cache.tgz  populate-mgnifyr-cache.R  py-environment.yml  r-environment.yml  zip-mgnifyr-cache.sh
docker/: Dockerfile  docs.Dockerfile  fix-permissions
jlab_query_params/: .copier-answers.yml  .gitignore  .prettierignore  LICENSE  README.md  RELEASE.md  install.json  package.json  pyproject.toml
jlab_redir_from_url_query_params/: .gitignore  .prettierignore  LICENSE  MANIFEST.in  README.md  install.json  package.json  setup.py
jupyter_config/: jupyter_config.json
mgnify_jupyter_lab_ui/: .gitignore  .prettierignore  MANIFEST.in  README.md  RELEASE.md  install.json  package.json  pyproject.toml
shiny-proxy/: Dockerfile  application.yml  custom.js  test.Dockerfile
shiny_proxy_jlab_query_parms/: .gitignore  .prettierignore  LICENSE  MANIFEST.in  README.md  RELEASE.md  install.json  package.json  pyproject.toml  setup.py
shiny_proxy_jlab_query_parms/.github/workflows/: build.yml  check-release.yml
shiny_proxy_jlab_query_parms/jupyter-config/nb-config/: shiny_proxy_jlab_query_parms.json
shiny_proxy_jlab_query_parms/jupyter-config/server-config/: shiny_proxy_jlab_query_parms.json
shiny_proxy_jlab_query_parms/shiny_proxy_jlab_query_parms/: __init__.py  handlers.py
shiny_proxy_jlab_query_parms/src/: handler.ts  index.ts
src/: docs.qmd  notebooks_list.qmd
tests/: jest-puppeteer.config.js  (+4 more)
(+109 files in other folders)
